<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout_data_diri"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.datadiri.DataDiriActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/etNoKtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_state"
                    android:hint="@string/nomor_ktp"
                    android:inputType="number"
                    android:maxLength="16"
                    android:padding="@dimen/activity_horizontal_margin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/etNamaLengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_state"
                    android:hint="@string/nama_lengkap"
                    android:inputType="textCapCharacters"
                    android:maxLength="10"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/etNoRek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_state"
                    android:hint="@string/nomor_rekening"
                    android:inputType="number"
                    android:maxLength="8"
                    android:padding="@dimen/activity_horizontal_margin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/rounded_edittext_state"
                android:paddingTop="15dp">

                <Spinner
                    android:id="@+id/spnTingkatPendidikan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:paddingTop="15dp">

                <EditText
                    android:id="@+id/etTglLhr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext_state"
                    android:focusable="false"
                    android:hint="@string/tanggal_lahir"
                    android:inputType="date"
                    android:padding="@dimen/activity_horizontal_margin" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnNextDataDiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>